--- a/.stylelintrc
+++ b/.stylelintrc
@@ -42,6 +42,7 @@
     } ],
     "declaration-bang-space-after": "never",
     "declaration-bang-space-before": "always",
+    "declaration-block-no-ignored-properties": true,
     "declaration-block-no-shorthand-property-overrides": true,
     "declaration-block-semicolon-newline-after": "always-multi-line",
     "declaration-block-semicolon-space-after": "always-single-line",
@@ -509,4 +510,3 @@
     ], { unspecified: "bottom" }]
     }
 }
-
