--- a/package.json
+++ b/package.json
@@ -78,8 +78,9 @@
     "rc": "^1.2.1",
     "rimraf": "2.4.4",
     "strftime": "0.9.2",
-    "stylelint": "7.9.0",
-    "stylelint-plugin-regru": "1.3.0",
+    "stylelint": "^7.9.0",
+    "stylelint-order": "^0.8.0",
+    "stylelint-plugin-regru": "^1.3.0",
     "svg-url-loader": "1.1.0",
     "uglify-js": "2.8.22",
     "uglifyjs-webpack-plugin": "0.4.3",
